Type:Bm Descr:correction bug [#1524] Erreurs peu explicites / visibles
git-svn-id: https://subversion.renater.fr/lodel/trunk@3820 9f73b02b-de1c-0410-bbc7-d36e22b4c400

--- a/share/css/styles_lodel.css
+++ b/share/css/styles_lodel.css
@@ -286,6 +286,14 @@ div.oneItem input, div.oneItem  textarea, div.oneItem  select{
 	background: #f1f5fb;
 }
 
+div.error{
+	width: 550px;
+	border: 1px solid red;
+	margin: 0 0 3ex 40px;
+	padding: 2ex 1em 2ex 1em;
+	background: #ffffff;
+}
+
 /* images de previsualisation dans formulaire edition */
 
 img.imageEdit{
